Use z-index to solve map visibility

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -9,6 +9,8 @@
     overflow: visible;
     margin: -10px;
     padding: 20px 20px;
+    position: relative;
+    z-index: 1000;
 }
 
 .header img {
@@ -18,6 +20,8 @@
 .main {
     display: flex;
     padding: 1%;
+    position: relative;
+    z-index: 1;
 }
 
 #sidebar {
@@ -31,8 +35,8 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    margin-top: -6px;
-    margin-bottom: -15px;
+    margin-top: -20px;
+    margin-bottom: -1%px;
 }
 
 .enter-zip {
@@ -99,6 +103,8 @@
     background-color: grey;
     padding-bottom: 250px;
     margin-bottom: -250px;
+    position: relative;
+    z-index: 1000;
 }
 
 rect.btn {
